--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,9 @@
-<h1>Profile</h1>
+<h2 style="text-align: center; margin-top: 3rem">Sobre mi</h2>
+<div class="about-container">
+  <p>
+    Me gusta mucho la programación, explorar nuevas herramientas y trabajar en
+    áreas afines al diseño, en este caso me decante al área de desarrollo web
+    para plasmar en código las idea de un diseñador web, me gusta trabajar en
+    equipo y también disfruto explorando mis soluciones.
+  </p>
+</div>
