--- a/src/app/layout/layout.component.css
+++ b/src/app/layout/layout.component.css
@@ -1,10 +1,24 @@
+
 header {
+  /* max-width: 1280px; */
+  /* margin: auto; */
+  background-color: white;
+  padding: 1rem 0 1rem 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+}
+
+.container{
+  max-width: 1280px;
+  margin: auto;
   display: flex;
   justify-content: space-between;
 }
 
-header, main {
-  max-width: 1280px;
+main {
   margin: auto;
 }
 
@@ -21,4 +35,18 @@ ul {
 ul li {
   list-style: none;
   margin-right: 15px;
+}
+
+a {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.514);
+  font-size: 17px;
+}
+
+a:hover{
+  color: #2ec02e;
+}
+
+.name {
+  font-weight: 600;
 }
