--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -11,12 +11,15 @@
           </div>
         </div>
       </a>
-      <div class="box">
-        <span></span>
-        <div class="content">
-          <h2>Tamagochi</h2>
+      <a href="" class="proyectos-link" target="_blank">
+        <div class="box">
+          <span></span>
+          <div class="content" style="display: flex; flex-direction: column;">
+            <h2>Tamagochi</h2>
+            <p>más info</p>
+          </div>
         </div>
-      </div>
+      </a>
       <a href="https://github.com/AltairCGS/todo-app" class="proyectos-link" target="_blank">
         <div class="box">
           <span></span>
@@ -38,8 +41,9 @@
       <a href="https://altaircgs.github.io/BootcampDesafio/" class="proyectos-link" target="_blank">
         <div class="box">
           <span></span>
-          <div class="content">
+          <div class="content" style="display: flex; flex-direction: column;">
             <h2>Rest Countries</h2>
+            <p>más info</p>
           </div>
         </div>
       </a>
