--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -11,7 +11,7 @@
           </div>
         </div>
       </a>
-      <a href="" class="proyectos-link" target="_blank">
+      <a href="https://altaircgs.github.io/tamagochi/" class="proyectos-link" target="_blank">
         <div class="box">
           <span></span>
           <div class="content" style="display: flex; flex-direction: column;">
